chore: update RUNNER_LABELS in .env.schema to remove 'self-hosted' label

--- a/.env.schema
+++ b/.env.schema
@@ -2,5 +2,5 @@
 # For organization runner: https://github.com/YOUR_USERNAME
 # For repository runner: https://github.com/YOUR_USERNAME/YOUR_REPO
 REPOSITORY=dannyvcfranca
-RUNNER_LABELS=wsl2,docker,self-hosted,linux
+RUNNER_LABELS=wsl2,docker
 ACCESS_TOKEN=
