chore: update .env.schema for GitHub self-hosted runner configuration, including RUNNER_TYPE and ACCESS_TOKEN fields

--- a/.env.schema
+++ b/.env.schema
@@ -1,6 +1,14 @@
-# GitHub Configuration
-# For organization runner: https://github.com/YOUR_USERNAME
-# For repository runner: https://github.com/YOUR_USERNAME/YOUR_REPO
-REPOSITORY=dannyvcfranca
+# GitHub Self-Hosted Runner Configuration
+
+# Runner type: 'org' for organization runners, 'repo' for repository runners
+RUNNER_TYPE=org
+
+# For organization runner: YOUR_ORG_NAME
+# For repository runner: YOUR_USERNAME/YOUR_REPO
+REPOSITORY=your-org-or-repo
+
+# Comma-separated list of runner labels
 RUNNER_LABELS=wsl2,docker
-ACCESS_TOKEN=
+
+# GitHub Personal Access Token
+ACCESS_TOKEN=your_github_personal_access_token
