chore: update RUNNER_LABELS in .env.schema to remove 'wsl2' label

--- a/.env.schema
+++ b/.env.schema
@@ -8,7 +8,7 @@ RUNNER_TYPE=org
 REPOSITORY=your-org-or-repo
 
 # Comma-separated list of runner labels
-RUNNER_LABELS=wsl2,docker
+RUNNER_LABELS=docker
 
 # GitHub Personal Access Token
 ACCESS_TOKEN=your_github_personal_access_token
