feat: enhance runner configuration with architecture and naming options in .env.schema, Dockerfile, and compose.yml; update README.md for clarity

--- a/.env.schema
+++ b/.env.schema
@@ -10,5 +10,17 @@ REPOSITORY=your-org-or-repo
 # Comma-separated list of runner labels
 RUNNER_LABELS=docker
 
+# Runner name prefix (will be combined with container hostname)
+# Example: RUNNER_NAME_PREFIX=prod will create runners like prod-abc123
+RUNNER_NAME_PREFIX=runner
+
+# Runner architecture: 'x64' for AMD64/Intel, 'arm64' for ARM64/Apple Silicon
+RUNNER_ARCH=x64
+
+# Docker platform: Must match RUNNER_ARCH
+# - If RUNNER_ARCH=x64, use DOCKER_PLATFORM=linux/amd64
+# - If RUNNER_ARCH=arm64, use DOCKER_PLATFORM=linux/arm64
+DOCKER_PLATFORM=linux/amd64
+
 # GitHub Personal Access Token
 ACCESS_TOKEN=your_github_personal_access_token
